# LoLSan

./: README.md  eslint.js  package-lock.json  package.json  tsconfig.eslint.json
.github/: .github-actions.yaml
.github/workflows/: .github-actions.yaml
src/: App.tsx  Config.tsx  command.ts  logic.ts  main.tsx  schema.json  schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/permissions/: migrated.json
src-tauri/src/: app.rs  main.rs  util.rs
src-tauri/src/app/: cmd.rs  event.rs  state.rs
src-tauri/src/app/logic/: fetch.rs
src-tauri/src/types/: error.rs  state.rs
src-tauri/src/util/: obsidian.rs  path.rs
src/schema/: AllGameData.json  AllGameData.ts  InvalidAllGameData1.json  Player.json  Player.ts  ValidAllGameData1.json
