[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.7"
thiserror = "2.0.0"
open = "5.3.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
anyhow = "1.0.93"
log = "0.4.22"
tauri-plugin-log = "2.0.2"
tauri-plugin-dialog = "2"
attohttpc = "0.28.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
